--- a/CSS/style.css
+++ b/CSS/style.css
@@ -1,14 +1,15 @@
 body {
     font-family: 'Inter', sans-serif;
 }
+
 .navbar {
-    max-width: 870px;
-    width: 100%;
-    margin: auto;
     display: flex;
     align-items: center;
     justify-content: space-between;
 }
+
+
+
 .nav-list {
     width: 357px;
     display: flex;
@@ -19,12 +20,85 @@ body {
     padding: 0;
     font-weight: 400;
 }
+
 .nav-link {
     color: #BF7506;
     text-decoration: none;
     font-size: 16px;
     line-height: 150%;
 }
+
 .nav-link.active {
     font-weight: 700;
+}
+
+.conteiner {
+    max-width: 870px;
+    width: 100%;
+    margin: auto;
+}
+
+.header {
+    padding: 70px 0;
+    display: flex;
+    align-items: center;
+}
+
+
+.header-text {
+    margin-left: 27px;
+}
+
+.header-strong {
+    font-weight: 700;
+    font-size: 44px;
+    line-height: 125%;
+}
+
+.header-heading {
+    font-weight: 700;
+    font-size: 24px;
+    line-height: 135%;
+    letter-spacing: -0.02em;
+    margin-top: 8px;
+    margin-bottom: 24px;
+}
+
+.header-primary {
+    color: #BF7506;
+}
+
+.social-list {
+    list-style: none;
+    padding: 0;
+    display: flex;
+    align-items: center;
+}
+
+.social-link {
+    display: inline-block;
+    padding: 8px;
+    font-size: 0;
+}
+
+.header-links {
+    display: flex;
+    align-items: center;
+}
+
+.cv-download {
+    padding: 7px 8px;
+    margin-left: 55px;
+    display: flex;
+    align-items: center;
+    text-decoration: none;
+    font-weight: 700;
+    font-size: 16px;
+    line-height: 150%;
+    color: #211B12;
+    border-bottom: 2px solid #BF7506;
+}
+
+.cv-icon {
+    margin-right: 4px;
 }
