--- a/CSS/style.css
+++ b/CSS/style.css
@@ -10,6 +10,7 @@ body {
     display: flex;
     align-items: center;
     justify-content: space-between;
+    padding: 40px;
 }
 
 
@@ -118,6 +119,10 @@ body {
 .card {
     max-width: 400px;
     margin-bottom: 40px;
+}
+
+.card-image {
+    max-width: 100%;
 }
 
 .card-text-wrapper {
@@ -256,6 +261,7 @@ body {
 }
 
 .feedback {
+    position: relative;
     padding: 80px 0 160px;
 }
 
@@ -280,7 +286,7 @@ body {
 .input {
     border: 3px solid #e0dedc;
     border-radius: 4px;
-    width: 435px;
+    width: 100%;
     height: 56px;
 }
 
@@ -311,4 +317,114 @@ body {
 .button-group {
     display: flex;
     justify-content: flex-end;
+}
+
+.feedback-hand {
+    position: absolute;
+    top: 20%;
+    right: 0;
+    width: 25%;
+}
+
+@media (max-width: 1024px) {
+    .conteiner {
+        max-width: 760px;
+    }
+
+    .card {
+        max-width: 350px;
+    }
+}
+
+@media (max-width: 790px) {
+    .conteiner {
+        max-width: 576px;
+    }
+
+    .card {
+        max-width: 45%;
+    }
+
+    .header-photo {
+        max-width: 150px;
+    }
+
+    .header-strong {
+        font-size: 36px;
+    }
+
+    .header-heading {
+        font-size: 18px;
+    }
+
+    .cv-download {
+        margin-left: 15px;
+    }
+
+    .card-text-wrapper {
+        padding: 8px 0;
+    }
+
+    .developer {
+        flex-direction: column;
+    }
+
+    .developer-photo {
+        align-self: start;
+        height: 350px;
+        object-position: 50% 20%;
+        margin-bottom: 30px;
+    }
+
+    .developer-about {
+        margin-left: 0;
+        padding-left: 20px;
+    }
+
+    .feedback-hand {
+        display: none;
+    }
+}
+
+@media (max-width: 600px) {
+    .conteiner {
+        max-width: 90%;
+    }
+
+    .header {
+        padding-top: 30px;
+        flex-direction: column;
+        text-align: center;
+    }
+
+    .header-links, .navbar, .cards {
+        flex-direction: column;
+    }
+
+    .cv-download {
+        margin-left: 0;
+    }
+
+    .card {
+        max-width: 100%;
+    }
+
+    .tags {
+        flex-wrap: wrap;
+    }
+}
+
+@media (max-width: 480px) {
+    .form-conteiner {
+        width: 90%;
+    }
+
+    .nav-list {
+        flex-direction: column;
+    }
+
+    .nav-link {
+        margin-left: 0;
+        margin-bottom: 10px;
+    }
 }
